# late_fusion

./: .gitignore  readme.md
image_detector_pkg/: package.xml  setup.py
image_detector_pkg/launch/: image_detector.launch.xml
late_fusion_pkg/: package.xml  setup.py
late_fusion_pkg/config/: config.yaml
late_fusion_pkg/late_fusion_pkg/: late_fusion_node.py
late_fusion_pkg/launch/: late_fusion.launch.py
late_fusion_pkg/scripts/: image_detector.py
late_subs_pkg/: package.xml  setup.cfg  setup.py
late_subs_pkg/late_subs_pkg/: late_subs_node.py
lidar_detector_pkg/: package.xml  setup.py
lidar_detector_pkg/config/: mmdet3d_pointpillars_config.yaml
lidar_detector_pkg/launch/: lidar_detect.launch.py
lidar_detector_pkg/lidar_detector_pkg/: lidar_detector_node.py
lidar_detector_pkg/model/: pointpillars_hv_secfpn_8xb6-160e_kitti-3d-3class.py
