<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>late_fusion_pkg</name>
  <version>0.0.1</version>
  <description>Implementation of an late fusion algorithm for camera images and lidar point clouds in agricultural enviorments</description>
  <maintainer email="ernestoroque777@gmail.com">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
